[package]
name = "cakegame"
version = "0.5.0"
edition = "2021"

[lib]
name = "cakegame"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
encoding = "0.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
