[package]
name = "cakegame"
version = "1.0.0"
edition = "2021"

[lib]
name = "cakegame"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1"
chrono = "0.4"
encoding_rs = "0.8"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
